tests/compile_fail/failure_to_infer_store_type.rs
use michie::memoized;

#[memoized(key_type = (), key_expr = (), store_init = Default::default())]
fn f() -> () {}

fn main() {}
