tests/compile_fail/failure_to_infer_store_type.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:38
  |
3 | #[memoized(key_type = (), key_expr = (), store_init = Default::default())]
  |                                      ^^ expected reference, found `()`
  |
  = note: expected reference `&_`
             found unit type `()`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
